--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>To-Do List | @ederyairr </title>
   <link href='http://fonts.googleapis.com/css?family=Sniglet|Gochi+Hand' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/estilos.css"/>
