--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   </div>
     <aside>
       <ul>
-        <a href=""><li class="github"></li></a>
-        <a href=""><li class="twitter"></li></a>
+        <a href="https://github.com/ederyair"><li class="github"></li></a>
+        <a href="https://twitter.com/ederyairr"><li class="twitter"></li></a>
       </ul>
     </aside>
 
